--- a/deskover-ecommerce-website/src/main/resources/templates/layout/layout.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/layout/layout.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:fragment="layout (title, modal, handheld, main)" ng-app="app">
+<html xmlns:th="http://www.thymeleaf.org" th:fragment="layout (title, modal_out, modal_in, handheld, main)" ng-app="app">
 
 <head>
     <title th:replace="${title}">title</title>
     <th:block th:include="components/header.html :: header"></th:block>
-    <!-- Vendor Styles including: Font Icons, Plugins, etc.-->
-    <link rel="stylesheet" media="screen" th:href="@{/vendor/simplebar/dist/simplebar.min.css}" />
-    <link rel="stylesheet" media="screen" th:href="@{/vendor/tiny-slider/dist/tiny-slider.css}" />
-    <link rel="stylesheet" media="screen" th:href="@{/vendor/drift-zoom/dist/drift-basic.min.css}" />
-    <link rel="stylesheet" media="screen" th:href="@{/vendor/lightgallery.js/dist/css/lightgallery.min.css}" />
 </head>
 
 <body class="handheld-toolbar-enabled">
     <!-- Sign in / sign up modal-->
     <th:block th:replace="components/modal/signin_signup.html :: modal"></th:block>
-    <th:block th:replace="${modal} ?: ~{}"></th:block>
+    <th:block th:replace="${modal_out} ?: ~{}"></th:block>
     <main class="page-wrapper">
-        <!-- Quick View Modal-->
-        <th:block th:replace="components/modal/quick_view.html :: modal"></th:block>
+        <th:block th:replace="${modal_in} ?: ~{}"></th:block>
         <!-- Navbar Store-->
         <th:block th:replace="components/navigation_header.html :: menu"></th:block>
         <article th:insert="${main} ?: ~{}" th:remove="tag">
         </article>
     </main>
+    
 
     <!-- Footer-->
     <th:block th:replace="components/footer.html :: footer"></th:block>
