--- a/deskover-dashboard-website/src/app/components/layouts/header/header.component.html
+++ b/deskover-dashboard-website/src/app/components/layouts/header/header.component.html
@@ -7,9 +7,6 @@
   <li class="nav-item d-none d-sm-inline-block">
     <a [routerLink]="['/']" class="nav-link">Trang chủ</a>
   </li>
-  <!-- <li class="nav-item d-none d-sm-inline-block">
-      <a [routerLink]="['/blank']" class="nav-link">Liên hệ</a>
-  </li> -->
 </ul>
 
 <form class="form-inline ms-3" [formGroup]="searchForm" *ngIf="false">
@@ -27,10 +24,7 @@
 </form>
 
 <ul class="navbar-nav ms-auto">
-  <!-- <app-messages></app-messages> -->
-  <!-- <app-notifications></app-notifications> -->
-  <!-- <  app-language></> -->
-  <app-user></app-user>
+  <app-user-info></app-user-info>
   <li class="nav-item">
     <button class="nav-link" (click)="onToggleControlSidebar()">
       <i class="fas fa-th-large"></i>
