--- a/deskover-ecommerce-website/src/main/resources/templates/item.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/item.html
@@ -58,7 +58,7 @@
                                 <div class="col-lg-7 pe-lg-0">
                                     <div class="product-gallery">
                                         <div class="product-gallery-preview order-sm-2">
-                                            <div class="product-gallery-preview-item active" id="a0"><img class="image-zoom" th:src="${product.imageUrl}" th:data-zoom="${product.imageUrl}" alt="Product image">
+                                            <div class="product-gallery-preview-item active" id="a0"><img class="image-zoom" th:src="${product.getImgUrl}" th:data-zoom="${product.getImgUrl}" alt="Product image">
                                                 <div class="image-zoom-pane"></div>
                                             </div>
                                             <th:block th:each="thumbs, i : ${product.thumbsnails}" th:remove="tag">
@@ -70,7 +70,7 @@
                                             
                                         </div>
                                         <div class="product-gallery-thumblist order-sm-1">
-                                            <a class="product-gallery-thumblist-item active" href="#a0"><img th:src="${product.imageUrl}" alt="Product thumb"></a>
+                                            <a class="product-gallery-thumblist-item active" href="#a0"><img th:src="${product.getImgUrl}" alt="Product thumb"></a>
                                             <th:block th:each="thumbs, i : ${product.thumbsnails}">
                                              <a class="product-gallery-thumblist-item" th:href="${'#a'+(i.index+1)}"><img th:src="${thumbs}" alt="Product thumb"></a>
                                             </th:block>
@@ -134,7 +134,7 @@
                         <!-- Tech specs tab-->
                         <div class="tab-pane fade" id="specs" role="tabpanel">
                             <div class="d-md-flex justify-content-between align-items-start pb-4 mb-4 border-bottom">
-                                <div class="d-flex align-items-center me-md-3"><img th:src="${product.image}" width="90" alt="Product thumb">
+                                <div class="d-flex align-items-center me-md-3"><img th:src="${product.getImg}" width="90" alt="Product thumb">
                                     <div class="ps-3">
                                         <h6 class="fs-base mb-2">[[${product.name}]]</h6>
                                         <div class="h4 fw-normal text-accent">[[${#numbers.formatInteger(product.price,3,'COMMA')}]]<small> VND</small></div>
@@ -163,7 +163,7 @@
                         <!-- Reviews tab-->
                         <div class="tab-pane fade" id="reviews" role="tabpanel">
                             <div class="d-md-flex justify-content-between align-items-start pb-4 mb-4 border-bottom">
-                                <div class="d-flex align-items-center me-md-3"><img th:src="${product.image}" width="90" alt="Product thumb">
+                                <div class="d-flex align-items-center me-md-3"><img th:src="${product.getImg}" width="90" alt="Product thumb">
                                     <div class="ps-3">
                                         <h6 class="fs-base mb-2">[[${product.name}]]</h6>
                                         <div class="h4 fw-normal text-accent">[[${#numbers.formatInteger(product.price,3,'COMMA')}]]<small> VND</small></div>
