--- a/deskover-dashboard-website/src/app/components/home/manage/product/product.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/product/product.component.html
@@ -217,6 +217,11 @@
                   <span *ngIf="quantity.errors?.required">Vui lòng nhập số lượng</span>
                 </div>
               </div>
+              <div class="col-12 mb-3">
+                <label class="form-label" [for]="'video'">Youtube URL</label>
+                <input type="url" class="form-control" id="video" name="video" [(ngModel)]="product.video"
+                       #video="ngModel" placeholder="https://youtu.be/fazEeJYHxTc" pattern="https://.*"/>
+              </div>
             </div>
             <div class="col-12 col-lg-8">
               <div class="row mb-3">
@@ -243,16 +248,22 @@
                   </div>
                 </div>
               </div>
-              <div class="col-12 mb-3">
+              <!--<div class="mb-3">
+                <label>Video mô tả (Youtube)</label>
+                <div class="ratio ratio-16x9">
+                  <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" title="YouTube video" allowfullscreen></iframe>
+                </div>
+              </div>-->
+             <!-- <div class="mb-3">
                 <label class="form-label">Thông số kỹ thuật</label>
                 <app-ckeditor [id]="'spec'" [name]="'spec'"
                               [(ngModel)]="product.spec"></app-ckeditor>
               </div>
-              <div class="col-12 mb-3">
+              <div class="mb-3">
                 <label class="form-label">Mô tả</label>
                 <app-ckeditor [id]="'description'" [name]="'description'"
                               [(ngModel)]="product.description"></app-ckeditor>
-              </div>
+              </div>-->
             </div>
           </div>
         </form>
