--- a/deskover-dashboard-website/src/app/components/home/manage/product/product.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/product/product.component.html
@@ -249,15 +249,30 @@
                 </div>
               </div>
               <div class="mb-3">
-                <label class="form-label">Thông số kỹ thuật</label>
-                <app-ckeditor [id]="'spec'" [name]="'spec'"
-                              [(ngModel)]="product.spec"></app-ckeditor>
+                <label class="form-label">Mô tả & Thông số kỹ thuật</label>
+                <tabset type="pills mb-2">
+                  <tab heading="Mô tả chi tiết">
+                    <app-ckeditor [id]="'description'" [name]="'description'"
+                                  [(ngModel)]="product.description"></app-ckeditor>
+                  </tab>
+                  <tab heading="Thông số kĩ thuật">
+                    <app-ckeditor [id]="'spec'" [name]="'spec'"
+                                  [(ngModel)]="product.spec"></app-ckeditor>
+                  </tab>
+                  <tab heading="Tính năng">
+                    <app-ckeditor [id]="'utility'" [name]="'utility'"
+                                  [(ngModel)]="product.utility"></app-ckeditor>
+                  </tab>
+                  <tab heading="Kích thước và cân nặng">
+                    <app-ckeditor [id]="'design'" [name]="'design'"
+                                  [(ngModel)]="product.design"></app-ckeditor>
+                  </tab>
+                  <tab heading="Khác">
+                    <app-ckeditor [id]="'other'" [name]="'other'"
+                                  [(ngModel)]="product.other"></app-ckeditor>
+                  </tab>
+                </tabset>
               </div>
-              <!--<div class="mb-3">
-                <label class="form-label">Mô tả</label>
-                <app-ckeditor [id]="'description'" [name]="'description'"
-                              [(ngModel)]="product.description"></app-ckeditor>
-              </div>-->
             </div>
           </div>
         </form>
