Add user router

--- a/deskover-dashboard-website/src/app/components/home/manage/product/product.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/product/product.component.html
@@ -263,7 +263,7 @@
                     <app-ckeditor [id]="'utility'" [name]="'utility'"
                                   [(ngModel)]="product.utility"></app-ckeditor>
                   </tab>
-                  <tab heading="Kích thước và cân nặng">
+                  <tab heading="Thiếu kế">
                     <app-ckeditor [id]="'design'" [name]="'design'"
                                   [(ngModel)]="product.design"></app-ckeditor>
                   </tab>
