--- a/deskover-dashboard-website/src/app/components/home/manage/products/products.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/products/products.component.html
@@ -267,7 +267,7 @@
                     <app-ckeditor [id]="'utility'" [name]="'utility'"
                                   [(ngModel)]="product.utility"></app-ckeditor>
                   </tab>
-                  <tab heading="Thiếu kế">
+                  <tab heading="Thiết kế">
                     <app-ckeditor [id]="'design'" [name]="'design'"
                                   [(ngModel)]="product.design"></app-ckeditor>
                   </tab>
